Lisätty "resources" kansio ohjelman build pathiin. luotu Level, RandomLevel, SandTile, Tile ja Options luokat.

--- a/Pelituotanto/nbproject/project.properties
+++ b/Pelituotanto/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Pelituotanto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Pelituotanto-resources=resources
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Pelituotanto-resources}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,5 +74,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-src.res.dir=res
 test.src.dir=test
