--- a/Pelituotanto/nbproject/project.properties
+++ b/Pelituotanto/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pelituotanto.Interface
+main.class=wildwestshootout.MainMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
